--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -11,3 +11,14 @@
     color: black;
     text-decoration: none;
 }
+
+.img-border{
+    box-shadow: 0 5px 0 0 rgb(180, 168, 194);
+    border-radius: 5px;
+    transition: transform 1s;
+    
+    
+}
+.img-border:hover{
+    transform: scale(1.1);
+}
